--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 intended to commemorate the end of slavery in the United States following the end of the Civil War, and
                 that the model for the Statue was an African American woman.</p>
 
-            <a href="">Saiba mais</a>
+            <a href="">Learn more</a>
         </div>
 
     </section>
@@ -45,7 +45,7 @@
                 The wager was to "study the possibility of erecting an iron tower on the Champ-de-Mars with a square base, 125 metres across and 300 metres tall". Selected from among 107 projects, it was that of Gustave Eiffel, an entrepreneur, Maurice Koechlin and Emile Nouguier, both engineers, and Stephen Sauvestre, an architect, that was accepted.
             </p>
 
-            <a href="">Saiba mais</a>
+            <a href="">Learn more</a>
         </div>
 
     </section>
@@ -68,7 +68,7 @@
                 Neo-Gothic design was chosen to blend with the Tower of London, a request by Queen Victoria. <br><br>
             </p>
 
-            <a href="">Saiba mais</a>
+            <a href="">Learn more</a>
         </div>
 
     </section>
@@ -82,7 +82,7 @@
 
                 Construction of the Colosseum began sometime between C.E. 70 and 72 under the emperor Vespasian. It opened nearly a decade later and was modified several times in the following years. The massive structure measured approximately 189 by 156 meters (620 by 513 feet), towered four stories high, and included eighty entrances to the amphitheater—seventy-six for the patrons, two for participants of events, and two exclusively for the emperor to use. The sheer number of entrances proved to be necessary: the Colosseum could hold more than 50,000 spectators at its maximum capacity.</p>
 
-            <a href="">Saiba mais</a>
+            <a href="">Learn more</a>
         </div>
 
     </section>
